# wasmtime-bindings

./: Cargo.toml
src/: main.rs
wasmtime-bindings-common/: Cargo.toml
wasmtime-bindings-common/src/: lib.rs
wasmtime-bindings-macro/: Cargo.toml
wasmtime-bindings-macro/src/: lib.rs  method.rs  signature.rs  trait.rs
