[package]
name = "wasmtime-bindings-common"
version = "0.1.0"
authors = ["Yury Delendik <ydelendik@mozilla.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift-codegen = "0.41.0"
wasmtime-runtime = { git = "https://github.com/CraneStation/wasmtime", rev = "acd6a5e" }
